Add event pages and forms with styling and scripts

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,14 +69,14 @@
                 </select>
             </div>
 
-            <button type="submit">Register</button>
+            <button type="submit" id="submit-btn">Register</button>
             <button type="reset" class="reset">Clear</button>
 
         </form>
 
         <div id="successMessage" class="success"></div>
 
-    </div>
+    </div>++
 
     <script src="script.js"></script>
 </body>
