--- a/gdg/events.html
+++ b/gdg/events.html
@@ -54,9 +54,49 @@
         </div>
     </main>
 
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2023 GDG Space. All rights reserved.</p>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-brand">
+                <div class="logo">GDG<span>CSMU</span></div>
+                <p>Official Google Developers Group on Campus at CSMU. Building a community of passionate
+                    developers.
+                </p>
+                <div class="social-links">
+                    <a href="#" class="social-icon"><span>🌐</span></a>
+                    <a href="#" class="social-icon"><span>in</span></a>
+                    <a href="#" class="social-icon"><span>📷</span></a>
+                    <a href="#" class="social-icon"><span>✉️</span></a>
+                </div>
+            </div>
+
+            <div class="footer-links-group">
+                <div class="footer-column">
+                    <h4>Quick Links</h4>
+                    <a href="index.html">About</a>
+                    <a href="events.html">Events</a>
+                    <a href="signup.html">Team</a>
+                </div>
+                <div class="footer-column">
+                    <h4>Resources</h4>
+                    <a href="#">Technologies</a>
+                    <a href="#">Community</a>
+                    <a href="#">Contact</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; 2026 GDG on Campus CSMU. All rights reserved.</p>
+            <div class="built-by">
+                Built & Maintained by
+                <span class="dots">
+                    <span class="dot blue"></span>
+                    <span class="dot red"></span>
+                    <span class="dot yellow"></span>
+                    <span class="dot green"></span>
+                </span>
+                <strong>GDG CSMU Technical Team</strong>
+            </div>
         </div>
     </footer>
 
