Add authentication page with styles and functionality
- Created auth.html for the sign-in and sign-up interface.
- Added auth.css for styling the authentication page, including fluid background and card design.
- Implemented tab switching logic for login and signup forms.
- Included responsive design elements for better user experience.

--- a/gdg/events.html
+++ b/gdg/events.html
@@ -16,8 +16,7 @@
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="events.html" class="active">Events</a>
-            <a href="login.html" class="btn-outline">Login</a>
-            <a href="signup.html" class="btn-primary">Sign Up</a>
+            <a href="auth.html" class="btn-primary">Sign In</a>
         </div>
     </nav>
 
